--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ sudo: required
 notifications:
   email:
     recipients:
-      - ahmad.alkaff@ncs.com.sg
+      - ahmadalkaff3003@gmail.com
     on_success: always
     on_failure: always
 branches:
