--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,16 @@ notifications:
     on_failure: always
 branches:
   only:
-   - feature
+   - master
 
 before_script:
   - npm install -g @angular/cli
   
 script:
   - ng build --prod --base-href https://AhmadAlkaff.github.io/bitcoin-order-app/
+  
+after_success:
+  - git push https://github.com/AhmadAlkaff/bitcoin-order-app.git :feature
   
 deploy:
   provider: pages
@@ -28,4 +31,4 @@ deploy:
   local_dir: dist/bitcoin
   edge: true
   on:
-    branch: feature
+    branch: master
