--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ before_script:
 script:
   - ng lint
   - npm audit fix
+  - npm update
+  - npm i @angular-devkit/build-angular@0.803.24
   - ng build --prod --base-href https://AhmadAlkaff.github.io/bitcoin-order-app/
   
 after_success:
